# gsl4godot_gsl

./: .gitignore  HACKING  Makefile.am  NEWS  SCsub  config.h  configure.ac  generate_SCsub.py  godot_gsl.cpp  godot_gsl.h  godot_gsl_function.cpp  godot_gsl_function.h  godot_gsl_macros.h  godot_gsl_matrix.cpp  godot_gsl_matrix.h  godot_gsl_ode.cpp  godot_gsl_ode.h  godot_gsl_scalar_math.cpp  godot_gsl_scalar_math.h  godot_ode.cpp  godot_ode.h  gsl_machine.h  register_types.cpp  register_types.h
bst/: Makefile.am  avl.c  bst.c  gsl_bst.h  rb.c  test.c  trav.c
doc/: Makefile.am  autoconf.rst  blas.rst  debug.rst  filter.rst  fitting.texi  gsl-ref.info  index.rst  integration.rst  integration.texi  linalg.rst  linalg.texi  movstat.rst  multifit-nlinear.texi  nls.rst  randist.rst  specfunc-hermite.rst  specfunc-hermite.texi  spmatrix.rst  statistics.rst  usage.rst
doc_sphinx/: TODO  blas.rst  bspline.rst  cblas.rst  complex.rst  conf.py  err.rst  fft.rst  histogram.rst  ieee754.rst  include.rst  index.rst  integration.rst  interp.rst  intro.rst  linalg.rst  lls.rst  math.rst  multiroots.rst  (+19 more)
movstat/: Makefile.am  alloc.c  deque.c  funcacc.c  gsl_movstat.h  medacc.c  median.c  minmaxacc.c  mmacc.c  movQn.c  movSn.c  movapply.c  movmad.c  movmean.c  movmedian.c  movminmax.c  movqqr.c  movscaleSn.c  movstat_common.c  movsum.c  movvariance.c  mvacc.c  qnacc.c  qqracc.c  ringbuf.c  snacc.c  sumacc.c  test.c  test_Qn.c  test_Sn.c  test_mad.c  test_mean.c  test_medacc.c  test_median.c  test_minmax.c  test_minmaxacc.c  test_qqr.c  test_scaleSn.c  test_sum.c  test_variance.c
(+182 files in other folders)
